# throwaway-example

./: Cargo.toml  build.sh
aya-template-bpf/: Cargo.toml
aya-template-bpf/src/: main.rs
src/: main.rs
