[package]
name = "aya-template"
version = "0.1.0"
authors = ["Alessandro Decina <alessandro.d@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aya = { path = "../aya/aya", features = ["async_tokio"] }
anyhow = "1"
