[package]
name = "aya-template-bpf"
version = "0.1.0"
authors = ["Alessandro Decina <alessandro.d@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aya-bpf = { path = "../../aya/bpf/aya-bpf"}
aya-bpf-cty = { path = "../../aya/bpf/aya-bpf-cty"}

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
